<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.n56j.project1.ActivityAdmin"
    android:background="@drawable/wall22">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout51">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:id="@+id/button5"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="buttom2onClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/button6"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="buttom3onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Admin"
            android:id="@+id/textView35"
            android:textSize="@dimen/h3"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout13"
        android:layout_above="@+id/linearLayout51"
        android:layout_alignLeft="@+id/linearLayout12"
        android:layout_alignStart="@+id/linearLayout12"
        android:layout_marginBottom="62dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText9"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Password"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout11"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/linearLayout12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:id="@+id/imageView2"
            android:adjustViewBounds="false"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/question_man" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout12"
        android:layout_above="@+id/linearLayout13"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText8"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username" />
    </LinearLayout>

</RelativeLayout>
