<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.n56j.project1.ActivityRegisterAdmin"
    android:background="@drawable/wall22">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"

         />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout14"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:id="@+id/textView7"
            android:textSize="@dimen/h3"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:background="#82ffffff"
        android:layout_below="@+id/linearLayout14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout15"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/User"
                android:id="@+id/textView8"
                android:textSize="@dimen/h1"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/editText10"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout16"
            android:layout_below="@+id/linearLayout15"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:id="@+id/textView9"
                android:textSize="@dimen/h1"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/editText11"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout19"

            android:layout_centerHorizontal="true">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:id="@+id/textView12"
                android:textSize="@dimen/h1"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/editText14"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout20"
            android:layout_below="@+id/linearLayout19"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:id="@+id/textView13"
                android:textSize="@dimen/h1"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/editText15"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
