<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.n56j.project1.MainActivityAdmin"
    android:background="@drawable/wall22">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout22"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:id="@+id/imageView3"
            android:src="@android:drawable/ic_secure"
            android:adjustViewBounds="false"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout23"
        android:layout_below="@+id/linearLayout22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp">

        <Button
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:text="@string/Build1"
            android:id="@+id/button8"
            android:layout_below="@+id/linearLayout23"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:onClick="buttom4onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout24"
        android:layout_below="@+id/linearLayout23"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:text="@string/Shop"
            android:id="@+id/button9"
            android:layout_below="@+id/linearLayout23"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:onClick="buttom5onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout25"
        android:layout_below="@+id/linearLayout24"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:text="@string/Dorm"
            android:id="@+id/button10"
            android:layout_below="@+id/linearLayout23"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:onClick="buttom6onClick" />
    </LinearLayout>

</RelativeLayout>
